--- a/AuthorizationHelperTest/AuthorizationHelperTest.csproj
+++ b/AuthorizationHelperTest/AuthorizationHelperTest.csproj
@@ -11,7 +11,9 @@
 
 	<ItemGroup>
 		<PackageReference Include="coverlet.collector" Version="6.0.0"/>
+		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2"/>
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0"/>
+		<PackageReference Include="Moq" Version="4.20.72"/>
 		<PackageReference Include="NUnit" Version="3.14.0"/>
 		<PackageReference Include="NUnit.Analyzers" Version="3.9.0"/>
 		<PackageReference Include="NUnit3TestAdapter" Version="4.5.0"/>
@@ -22,7 +24,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\AuthorizationHelper\AuthorizationHelper.csproj" />
+		<ProjectReference Include="..\AuthorizationHelper\AuthorizationHelper.csproj"/>
 	</ItemGroup>
 
 </Project>
