--- a/AuthorizationHelper/AuthorizationHelper.csproj
+++ b/AuthorizationHelper/AuthorizationHelper.csproj
@@ -8,6 +8,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2"/>
+		<PackageReference Include="NUnit" Version="3.14.0"/>
 		<PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.2.0"/>
 	</ItemGroup>
 
